--- a/package.json
+++ b/package.json
@@ -52,6 +52,9 @@
       "last 1 safari version"
     ]
   },
+    "engines": {
+    "node": "22.x"
+  },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "dotenv": "^8.2.0",
